--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -75,7 +75,7 @@
     <i class="far fa-question-circle fa-spin"></i>
     <div class="err2">4</div>
     <div class="msg">Do not see the product you are looking for<p>
-        <a href="/products/">Back to home</a></p></div>
+        <a href="/products/admin">Back to home</a></p></div>
 </div>
 </body>
 </html>
