--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <style type="text/css">
+        body{
+            background-image:url(https://advsolutions.vn/wp-content/uploads/2020/01/background-powerpoint-don-gian-42.jpg);
+        }
+    </style>
 </head>
 <body>
-<h4><a href="/products">Danh sách sản phẩm</a></h4>
-<h4><a href="/products/shop">Shop</a></h4>
+<h4><a href="/products/admin">Danh sách sản phẩm</a></h4>
+<h4><a href="/products/user">Shop</a></h4>
+<h4><a href="/login">Đăng nhập</a></h4>
+<h4><a href="/signup">Đăng kí</a></h4>
 
 </body>
 </html>
