--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Edit product</title>
     <head th:replace="/layout :: head"></head>
+    <style type="text/css">
+        body{
+            background-image:url(https://advsolutions.vn/wp-content/uploads/2020/01/background-powerpoint-don-gian-42.jpg);
+        }
+    </style>
 </head>
 <center>
     <body>
