--- a/src/main/resources/templates/category/createcate.html
+++ b/src/main/resources/templates/category/createcate.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Create category</title>
+    <style type="text/css">
+        body{
+            background-image:url(https://advsolutions.vn/wp-content/uploads/2020/01/background-powerpoint-don-gian-42.jpg);
+        }
+    </style>
 </head>
 <body>
 <h1>Create category</h1>
