--- a/src/main/resources/templates/product/create.html
+++ b/src/main/resources/templates/product/create.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Create product</title>
     <head th:replace="/layout :: head"></head>
+    <style type="text/css">
+        body{
+            background-image:url(https://advsolutions.vn/wp-content/uploads/2020/01/background-powerpoint-don-gian-42.jpg);
+        }
+    </style>
 </head>
 <center>
     <body>
@@ -38,6 +43,7 @@
             <label>Description</label>
             <input type="text" th:field="*{description}"/>
         </div>
+        <br><br>
         <div>
             <label>Quantity</label>
             <input type="text" th:field="*{quantity}"/>
